# qt-qml-practise-1

./: .gitignore
lec10/: CMakeLists.txt  Main.qml  main.cpp  resource.qrc
lec11/: CMakeLists.txt  Main.qml  main.cpp  resource.qrc
lec12/: CMakeLists.txt  Main.qml  main.cpp
lec13/: CMakeLists.txt  Main.qml  main.cpp
lec7/: CMakeLists.txt  Main.qml  main.cpp
lec8/: CMakeLists.txt  Main.qml  main.cpp
lec9/: CMakeLists.txt  Main.qml  main.cpp  resource.qrc
tst3/: CMakeLists.txt  Main.qml  main.cpp  resource.qrc
